--- a/package.json
+++ b/package.json
@@ -47,16 +47,16 @@
     "clean": "rimraf dist typings",
     "lint": "tslint src/**/*.ts test/**/*.ts",
     "watch": "tsc --watch",
-    "pretest": "npm run build",
-    "test": "mocha --require babel-core/register",
-    "test:watch": "npm test -- --watch",
-    "prebuild": "npm run clean",
+    "pretest": "yarn build",
+    "test": "mocha",
+    "test:watch": "yarn test -r mocha-sinon --watch",
+    "prebuild": "yarn clean",
     "build": "tsc",
-    "prepublish": "npm run build",
+    "prepublish": "yarn build",
     "predocs": "rimraf docs/",
     "docs": "typedoc --out docs/ src/",
     "postdocs": "./gh-pages.js",
-    "prerelease": "npm test",
+    "prerelease": "yarn test",
     "release": "standard-version --sign && git push --follow-tags origin master",
     "commitmsg": "./bin/index.js"
   },
@@ -77,22 +77,16 @@
     "chai": "^4.1.2",
     "codelyzer": "4.2.1",
     "gh-pages": "^1.1.0",
-    "greenkeeper-lockfile": "1",
     "husky": "^0.14.3",
     "mocha": "^5.0.5",
     "mocha-sinon": "^2.0.0",
     "rimraf": "^2.6.2",
     "sinon": "^5.0.1",
+    "sinon-chai": "^3.2.0",
     "standard-version": "^4.3.0",
-    "trash-cli": "^1.4.0",
     "ts-node": "^6.0.0",
     "tslint": "^5.9.1",
     "typedoc": "^0.11.1",
     "typescript": "^2.7.2"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
   }
 }
